--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -96,19 +96,7 @@ h3 {
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
