Added alt text for images in HTML and added a comment to pinpoint which format goes to digital marketing meeting image

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -71,6 +71,7 @@ li {
     color: #d9dcd6;
 }
 
+/*Formatting for digital marketing meeting image at top of page*/
 .hero {
     height: 800px;
     width: 100%;
